# libregent

./: .gitignore  CMakeLists.txt  README.md
cmake/: regentConfig.cmake.in
docs/: COMPLETION_SUMMARY.md  PROMPT.md  RULESET.md
examples/: regent_cli.cpp  test_coordination.conllu  test_subordination.conllu
include/regent/: anaphora.h  conllu.h  cue_words.h  dep_graph.h  determiners.h  lineariser.h  ordering.h  ranker.h  referring.h  regent.h  rule.h  rule_registry.h  transformer.h  types.h
python/: CMakeLists.txt  INSTALL.md  README.md  example.py  pyproject.toml  pyregent.cpp  simple_test.py
src/: anaphora.cpp  conllu.cpp  cue_words.cpp  dep_graph.cpp  determiners.cpp  lineariser.cpp  ordering.cpp  ranker.cpp  referring.cpp  regent.cpp  rule.cpp  rule_registry.cpp  transformer.cpp  types.cpp
tests/: CMakeLists.txt  benchmark.cpp  debug_deletion.cpp  debug_split.cpp  debug_transform.cpp  test_basic.cpp  test_conllu.cpp  test_coordination.cpp  test_dep_graph.cpp  test_integration.cpp  test_lineariser.cpp  test_parse_only.cpp  test_simplify.cpp  test_transformer.cpp  verify_rules.cpp
