[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pyregent"
version = "0.1.0"
description = "Python bindings for libregent - RegenT-style syntactic text simplification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "libregent contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/yourusername/libregent"
Repository = "https://github.com/yourusername/libregent"

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.15"

[[tool.scikit-build.generate]]
path = "pyregent/_version.py"
template = '''
version = "${version}"
'''
